# conan.poco.no_shared_library_debug_suffix

./: .gitignore  README.md
application/: CMakeLists.txt  conanfile.py
application/src/: main.cpp
plugin/: CMakeLists.txt  conanfile.py
plugin-interface/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
plugin-interface/include/: IPluginFactory.h  PluginFactory.h
plugin/src/: PluginFactory.cpp
